--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,11 @@
     ],
     "require": {
         "friendsofhyperf/telescope": "~3.1.49",
-        "friendsofhyperf/elasticsearch": "~3.1.0",
         "hyperf/collection": "~3.1.0",
-        "hyperf/stringable": "~3.1.0",
-        "elasticsearch/elasticsearch": "^8.8.0"
+        "hyperf/stringable": "~3.1.0"
+    },
+    "suggest": {
+        "elasticsearch/elasticsearch": "Required to use Elasticsearch Client.(^7.17.0||^8.8.0)"
     },
     "autoload": {
         "psr-4": {
