--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
         "friendsofhyperf/telescope": "~3.1.49",
         "hyperf/collection": "~3.1.0",
+        "hyperf/guzzle": "~3.1.0",
         "hyperf/stringable": "~3.1.0"
     },
     "suggest": {
