--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,11 @@
         "pull-request": "https://github.com/friendsofhyperf/components/pulls"
     },
     "require": {
+        "elasticsearch/elasticsearch": "^8.0 || ^9.0",
         "friendsofhyperf/telescope": "~3.2.0",
         "hyperf/collection": "~3.2.0",
         "hyperf/guzzle": "~3.2.0",
         "hyperf/stringable": "~3.2.0"
-    },
-    "suggest": {
-        "elasticsearch/elasticsearch": "Required to use Elasticsearch Client (^8.0 || ^9.0)."
     },
     "autoload": {
         "psr-4": {
